--- a/ecommerce-app/src/app/pages/product-list/product-list.component.html
+++ b/ecommerce-app/src/app/pages/product-list/product-list.component.html
@@ -2,7 +2,12 @@
 <section>
   <h1>Discover Our Products</h1>
   <p>Lorem ipsum dolor sit amet consectetur...</p>
-
+  <div class="product-page">
+    <!-- <app-filter-sidebar (filtersChanged)="onFiltersChanged($event)"></app-filter-sidebar> -->
+    <div class="product-grid">
+      <!-- product cards go here -->
+    </div>
+  </div>
   <div class="product-grid">
     <app-product-card *ngFor="let product of products" [product]="product" />
   </div>
